Fixes scroll momentum bug on mobile (side rail)

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,7 +5,9 @@
       top: 0;
       width: 100%;
       height: 100%;
-      overflow-y: auto;
+      // overflow: auto;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
       z-index: 1; 
     }
     .main { 
